--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 #root{
   font-family: 'Nunito Sans', sans-serif;
   background-color: rgb(241 245 249);
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
